feat: Projeyi GitHub'da ön plana çıkarmak için kapsamlı iyileştirmeler
- README.md dosyasını profesyonel ve çekici hale getirdim
- Güvenlik ve performans iyileştirmeleri ekledim
- Modern ve responsive tasarım uyguladım
- GitHub Actions CI/CD pipeline kurulumu yaptım
- Composer.json ve bağımlılık yönetimi ekledim
- Katkıda bulunma rehberi oluşturdum
- MIT lisansı ve .gitignore dosyaları ekledim
- Kod kalitesi ve güvenlik standartlarını artırdım

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
-.idea/*
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+error.log
+access.log
+
+# Temporary files
+*.tmp
+*.temp
+
+# Environment
+.env
+.env.local
+.env.production
+
+# Dependencies
+vendor/
+node_modules/
+
+# Cache
+cache/
+tmp/
+
+# Sensitive files
+config.php
+secrets.php
